--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -30,6 +30,6 @@
   .profile__add-button {
     background-size: 35px;
     min-width: 282px;
-		margin: 0 0 0 auto;;;
+		margin: 0 0 0 auto;
 	}
 }
