--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,11 +1,11 @@
 .profile__add-button {
 	width: 150px;
 	height: 50px;
-	background-image: url(../../../images/addbtnn.png);
+	background-image: url(../../../images/addbtnn.svg);
 	background-color: transparent;
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 48px;
+	background-size: 22px;
 	border: 2px solid white;
 	border-radius: 2px;
 	display: flex;
@@ -14,6 +14,7 @@
 	cursor: pointer;
 	transition: opacity 0.5s ease;
 	float: right;
+	padding: 0;
 }
 
 .profile__add-button:hover {
@@ -22,14 +23,14 @@
 
 @media screen and (max-width: 923px) {
   .profile__add-button {
-		margin-left: 58px;
+    margin-left: 58px;
   }
 }
 
 @media screen and (max-width: 647px) {
   .profile__add-button {
-    background-size: 35px;
+    background-size: 16px;
     min-width: 282px;
-		margin: 0 0 0 auto;
+    margin: 0 0 0 auto;
 	}
 }
