--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,7 @@
 	width: 24px;
 	height: 24px;
 	outline: none;
-	background-image: url(../../../images/editbutton.png);
+	background-image: url(../../../images/editbutton.svg);
 	background-color: transparent;
 	border: 1px solid white;
 	background-position: center;
