--- a/blocks/elements/__info/elements__info.css
+++ b/blocks/elements/__info/elements__info.css
@@ -5,6 +5,5 @@
 	align-items: center;
 	background-color: white;
 	border-radius: 0 0 10px 10px;
-	height: 35px;
-	padding: 25px 25px;
+	padding: 25px 15px 31px 21px;
 }
