--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -4,5 +4,5 @@
 	outline: none;
 	padding: 0 0 13px 0;
 	box-sizing: border-box;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
