--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -7,6 +7,8 @@
 	overflow: hidden;
 	text-align: center;
 	white-space: nowrap;
+	max-width: 294px;
+	text-overflow:ellipsis;
 }
 
 @media screen and (max-width: 923px) {
@@ -22,6 +24,5 @@
     font-size: 27px;
     line-height: 33px;
     max-width: 189px;
-    text-align: center;
 	}
 }
