--- a/blocks/popup/__label/popup__label.css
+++ b/blocks/popup/__label/popup__label.css
@@ -3,5 +3,11 @@
 }
 
 .popup__label:last-of-type {
-	margin: 0 0 45px 0;
+	margin: 0 0 48px 0;
+}
+
+@media screen and (max-width: 647px) {
+	.popup__label:last-of-type {
+		margin: 0 0 45px 0;
+	}
 }
