--- a/blocks/elements/__like-active/elements__like-active.css
+++ b/blocks/elements/__like-active/elements__like-active.css
@@ -1,3 +1,3 @@
 .elements__like-active {
-	background: transparent url(../../../../images/likeactive.svg);
+	background: transparent url(../../../images/likeactive.svg);
 }
