--- a/pages/index.css
+++ b/pages/index.css
@@ -15,7 +15,9 @@
 @import url(../blocks/elements/__element/elements__element.css);
 @import url(../blocks/elements/__photo/elements__photo.css);
 @import url(../blocks/elements/__info/elements__info.css);
+@import url(../blocks/elements/__delete/elements__delete.css);
 @import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__box/elements__box.css);
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/elements/__like-active/elements__like-active.css);
 @import url(../blocks/footer/footer.css);
@@ -29,3 +31,8 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__submit/popup__submit.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__image/popup__image.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__close-image/popup__close-image.css);
+@import url(../blocks/popup/__item-img/popup__item-img.css);
+@import url(../blocks/popup/__container-image/popup__container-image.css);
