--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,4 @@
 @import url(../blocks/popup/__close-image/popup__close-image.css);
 @import url(../blocks/popup/__item-img/popup__item-img.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
+@import url(../blocks/popup/__background/popup__background.css);
