--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,6 @@
 @import url(../blocks/popup/__item-img/popup__item-img.css);
 @import url(../blocks/popup/__container-image/popup__container-image.css);
 @import url(../blocks/popup/_type/_image/popup_type_image.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+@import url(../blocks/popup/__submit/_disabled/popup__submit_disabled.css);
